sdk/tests/snapshots/test_error__smoke_basic_error.snap
---
source: sdk/tests/test_error.rs
expression: ser
---
type: error@v1
name: OperationError
namespace: abc.corp.test
description: ~
version: 1
variants:
  Known:
    name: Known
    description: ~
    ty:
      compound_type:
        kind: struct
        ref: KnownError
  Unknown:
    name: Unknown
    description: ~
    ty:
      compound_type:
        kind: struct
        ref: OperationErrorUnknown
