sdk/tests/snapshots/test_error__smoke_error_code.snap
---
source: sdk/tests/test_error.rs
expression: ser
---
type: enum@v1
name: ErrorCode
namespace: abc.corp.test
description: ~
version: 1
variants:
  Baz:
    name: Baz
    namespace: abc.corp.test
    description: ~
    version: ~
    value: 2
  Foo:
    name: Foo
    namespace: abc.corp.test
    description: ~
    version: ~
    value: 1
