sdk/tests/snapshots/test_error__smoke_error_unknown.snap
---
source: sdk/tests/test_error.rs
expression: ser
---
type: struct@v1
name: OperationErrorUnknown
namespace: abc.corp.test
description: ~
version: 1
fields:
  desc:
    name: desc
    namespace: abc.corp.test
    description: some nested doc
    version: ~
    type: string
    optional: false
