sdk/tests/snapshots/test_error__smoke_known_error.snap
---
source: sdk/tests/test_error.rs
expression: ser
---
type: struct@v1
name: KnownError
namespace: abc.corp.test
description: ~
version: 1
fields:
  code:
    name: code
    namespace: abc.corp.test
    description: ~
    version: ~
    type:
      compound_type:
        kind: enum
        ref: ErrorCode
    optional: false
  desc:
    name: desc
    namespace: abc.corp.test
    description: ~
    version: ~
    type: string
    optional: false
